# dawnjection

./: Cargo.toml  README.md  makefile
core/: Cargo.toml
core-axum/: Cargo.toml
core-axum/examples/: axum.rs  hello-world.rs
core-axum/src/: lib.rs
core-codegen/: Cargo.toml
core-codegen-lib/: Cargo.toml
core-codegen-lib/src/: lib.rs  struct_from_di.rs
core-codegen/src/: lib.rs
core-rocket/: Cargo.toml
core-rocket/examples/: hello-world.rs
core-rocket/src/: lib.rs
core/examples/: axum.rs  basic.rs  dawnflow.rs  nats-publish.rs  nats.rs  rocket.rs  simple_handler.rs
core/src/: axum.rs  dawnflow.rs  handler.rs  lib.rs  nats.rs  nats_client.rs  rocket.rs
tests/: Cargo.toml
tests/src/: lib.rs
