[package]
name = "dawnjection-codegen"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.82", features = ["full", "extra-traits"] }
quote = "1.0.10"
dawnjection-codegen-lib = {path = "../core-codegen-lib"}

[dev-dependencies]