[package]
name = "dawnjection"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
axum = ["dep:axum"]
rocket = ["dep:rocket"]
serde_json_requests = ["dep:serde", "serde_json"]
default = []
serde = ["dep:serde"]
serde_json = ["dep:serde_json"]
nats_client_binary = ["dep:serde-binary"]

[dependencies]
dawnjection-codegen ={ path = "../core-codegen" }
async-trait = "0.1"
eyre = "0.6"
futures = "0.3"

rocket = { version="0.5", optional = true }
axum = { version = "0.7", optional = true }
uuid = { version = "1.10", optional = true, features = ["v4"] }
log = { version = "0.4", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
bytes = "1.7.1"
itertools = "0.13.0"
futures-util = "0.3.30"
serde = { version = "1.0.210", optional = true }
serde_json = { version = "1.0.128", optional = true }
serde-binary = { version = "0.5.0", optional = true }

[dev-dependencies]
tokio = {version="*", features = ["full"]}
color-eyre = "*"
env_logger = { version = "0.11", optional = false }

[[example]]
name = "axum"
path = "examples/axum.rs"
required-features = ["axum"]

[[example]]
name = "rocket"
path = "examples/rocket.rs"
required-features = ["rocket"]
