[package]
name = "dawnjection"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
axum = ["dep:axum"]
rocket = ["dep:rocket"]
dawnflow = ["dep:dawnflow"]

[dependencies]
dawnjection-codegen ={ path = "../core-codegen" }
async-trait = "0.1"
eyre = "0.6"
futures = "0.3"

rocket = { version="0.5", optional = true }
axum = { version = "0.8", optional = true }
dawnflow = { git = "https://github.com/TheAngusMcFire/dawnflow.git", tag = "0.2.0", optional = true }

[dev-dependencies]
tokio = {version="*", features = ["full"]}
color-eyre = "*"
env_logger = { version = "0.11", optional = false }

[[example]]
name = "axum"
path = "examples/axum.rs"
required-features = ["axum"]

[[example]]
name = "rocket"
path = "examples/rocket.rs"
required-features = ["rocket"]

[[example]]
name = "dawnflow"
path = "examples/dawnflow.rs"
required-features = ["dawnflow", "dawnflow/in_memory"]
